--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,26 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+  <!-- java source -->
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.5.1</version>
+        <configuration>
+<!--           <verbose>true</verbose>
+          <fork>true</fork>
+          <executable>${JAVA_HOME}/bin/javac</executable>
+          <compilerVersion>1.3</compilerVersion> -->
+          <source>1.8</source>
+          <target>1.8</target>
+          
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
   <!-- library dependencies -->
   <dependencies>
     <dependency>
